docs/archived/k8s/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam-platform-service
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: sso.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iam-platform-service
                port:
                  number: 9000
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: iam-platform-service
                port:
                  number: 9001
